@@ -1,5 +1,6 @@
 package com.example.schoolplatform.service;
 
+import com.example.schoolplatform.dto.SubjectDTO;
 import com.example.schoolplatform.entity.Subject;
 import com.example.schoolplatform.repository.SubjectRepository;
 import com.example.schoolplatform.exception.ResourceNotFoundException;
@@ -9,12 +10,11 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import java.util.Arrays;
-import java.util.Collections;
+
 import java.util.List;
 import java.util.Optional;
+
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 public class SubjectServiceTest {
@@ -34,10 +34,14 @@ public class SubjectServiceTest {
     @DisplayName("Deve retornar todas as matérias")
     void testFindAll() {
         Subject subject = new Subject("Matemática");
-        when(subjectRepository.findAll()).thenReturn(Arrays.asList(subject));
-        List<Subject> subjects = subjectService.findAll();
+        when(subjectRepository.findAll()).thenReturn(List.of(subject));
+
+        List<SubjectDTO> subjects = subjectService.findAll();
+
         assertEquals(1, subjects.size());
-        assertEquals("Matemática", subjects.get(0).getName());
+        assertEquals("Matemática", subjects.get(0).name());
+
+        System.out.println("Teste findAll executado: " + subjects.get(0).name());
     }
 
     @Test
@@ -45,75 +49,68 @@ public class SubjectServiceTest {
     void testFindById() {
         Subject subject = new Subject("Matemática");
         when(subjectRepository.findById(1L)).thenReturn(Optional.of(subject));
-        Subject found = subjectService.findById(1L);
-        assertEquals("Matemática", found.getName());
+
+        SubjectDTO dto = subjectService.findById(1L);
+
+        assertEquals("Matemática", dto.name());
+
+        System.out.println("Teste findById executado: " + dto.name());
     }
 
     @Test
-    @DisplayName("Deve lançar exceção quando matéria não for encontrada por ID")
+    @DisplayName("Deve lançar exceção quando matéria não for encontrada")
     void testFindByIdNotFound() {
         when(subjectRepository.findById(1L)).thenReturn(Optional.empty());
+
         assertThrows(ResourceNotFoundException.class, () -> subjectService.findById(1L));
+
+        System.out.println("Teste findByIdNotFound executado: exceção ResourceNotFoundException lançada com sucesso");
     }
 
     @Test
     @DisplayName("Deve salvar uma nova matéria")
     void testSave() {
         Subject subject = new Subject("Matemática");
-        when(subjectRepository.save(any(Subject.class))).thenReturn(subject);
-        Subject saved = subjectService.save(subject);
-        assertEquals("Matemática", saved.getName());
+        when(subjectRepository.save(subject)).thenReturn(subject);
+
+        SubjectDTO dto = subjectService.save(subject);
+
+        assertEquals("Matemática", dto.name());
+
+        System.out.println("Teste save executado: " + dto.name());
     }
 
     @Test
-    @DisplayName("Deve atualizar uma matéria existente")
+    @DisplayName("Deve atualizar matéria existente e retornar DTO")
     void testUpdate() {
         Subject subject = new Subject("Matemática");
         when(subjectRepository.findById(1L)).thenReturn(Optional.of(subject));
-        when(subjectRepository.save(any(Subject.class))).thenReturn(subject);
-        Subject updated = subjectService.update(1L, new Subject("Física"));
-        assertEquals("Física", updated.getName());
+        when(subjectRepository.save(subject)).thenReturn(subject);
+
+        SubjectDTO dto = subjectService.update(1L, new Subject("Física"));
+
+        assertEquals("Física", dto.name());
+
+        System.out.println("Teste update executado: " + dto.name());
     }
 
     @Test
-    @DisplayName("Deve deletar uma matéria por ID")
+    @DisplayName("Deve deletar matéria por ID")
     void testDeleteById() {
         when(subjectRepository.existsById(1L)).thenReturn(true);
         subjectService.deleteById(1L);
         verify(subjectRepository, times(1)).deleteById(1L);
+
+        System.out.println("Teste deleteById executado com sucesso");
     }
 
     @Test
-    @DisplayName("Deve lançar exceção ao tentar deletar matéria inexistente")
+    @DisplayName("Deve lançar exceção ao deletar matéria inexistente")
     void testDeleteByIdNotFound() {
         when(subjectRepository.existsById(1L)).thenReturn(false);
+
         assertThrows(ResourceNotFoundException.class, () -> subjectService.deleteById(1L));
-    }
 
-    @Test
-    @DisplayName("Deve lançar exceção ao salvar matéria nula")
-    void testSaveNullSubject() {
-        assertThrows(NullPointerException.class, () -> subjectService.save(null));
-    }
-
-    @Test
-    @DisplayName("Deve lançar exceção ao atualizar matéria nula")
-    void testUpdateNullSubject() {
-        assertThrows(NullPointerException.class, () -> subjectService.update(1L, null));
-    }
-
-    @Test
-    @DisplayName("Deve retornar lista vazia quando não houver matérias")
-    void testFindAllEmpty() {
-        when(subjectRepository.findAll()).thenReturn(Collections.emptyList());
-        List<Subject> subjects = subjectService.findAll();
-        assertTrue(subjects.isEmpty());
-    }
-
-    @Test
-    @DisplayName("Deve lançar exceção ao ocorrer erro no repositório ao buscar todos")
-    void testFindAllRepositoryException() {
-        when(subjectRepository.findAll()).thenThrow(new RuntimeException("Erro no banco"));
-        assertThrows(RuntimeException.class, () -> subjectService.findAll());
+        System.out.println("Teste deleteByIdNotFound executado: exceção ResourceNotFoundException lançada com sucesso");
     }
 }
